Move files, fix typos and indents

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -198,7 +198,10 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 Jared Liw Zhi Long - All Rights Reserved.</div></div>
+            <div class="container">
+                <div class="small text-center text-muted">Copyright © 2020 Jared Liw Zhi Long - All Rights Reserved.
+                </div>
+            </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
