Update images location

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -8,7 +8,7 @@
         <meta name="author" content="" />
         <title>Asas Sains Komputer SMK TInggi Batu Pahat</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}" />
+        <link rel="icon" type="image/x-icon" href="{% static 'home/images/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -23,7 +23,7 @@
         <!-- Navigation Bar-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <img class="nav-logo" src="{% static 'assets/img/logo.png' %}">
+                <img class="nav-logo" src="{% static 'home/images/logo.png' %}">
                 <a class="navbar-brand js-scroll-trigger" href="#page-top">SMK Tinggi Batu Pahat <br> Sekolah Kluster Kecemerlangan</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -114,7 +114,7 @@
                     <div class="row no-gutters">
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/web-developer.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/web-developer.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Pembangun Web</div>
                                     <div class="project-category text-white-50">Web Developer</div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/hardware-engineer.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/hardware-engineer.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Jurutera Perkakasan</div>
                                     <div class="project-category text-white-50">Hardware Engineer</div>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/data-scientist.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/data-scientist.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Ahli Sains Data</div>
                                     <div class="project-category text-white-50">Data Scientist</div>
@@ -141,7 +141,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/database-admin.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/database-admin.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Pentadbir Pangkalan Data</div>
                                     <div class="project-category text-white-50">Database Administrator</div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/college-professor.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/college-professor.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Profesor Kolej</div>
                                     <div class="project-category text-white-50">College Professor</div>
@@ -159,7 +159,7 @@
                         </div>
                         <div class="col-lg-4 col-sm-6">
                             <a class="careers-box">
-                                <img class="img-fluid" src="{% static 'assets/img/gallery/graphic-designer.jpg' %}" alt="" />
+                                <img class="img-fluid" src="{% static 'home/images/gallery/graphic-designer.jpg' %}" alt="" />
                                 <div class="careers-box-caption">
                                     <div class="career-name">Pereka Grafik</div>
                                     <div class="project-category text-white-50">Graphic Designer</div>
