Application quiz is done (UI only), functionality to be added

--- a/curriculum/templates/curriculum/base.html
+++ b/curriculum/templates/curriculum/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block additional_header %}
-<link href="{% static 'curriculum/curriculum.css' %}" rel="stylesheet" />
+<link href="{% static 'curriculum/base.css' %}" rel="stylesheet" />
 {% endblock additional_header %}
 
 {% block content %}
