Final bug and typo fix -- home

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -11,8 +11,8 @@
                 <hr class="divider my-4" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 font-weight-light mb-5">Asas Sains komputer ialah satu kajian terhadap asas teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya di dalam sistem komputer.</p>
-                <a class="btn btn-primary btn-xl js-scroll-trigger" href="#intro">Belajar sekarang</a>
+                <p class="text-white-75 font-weight-light mb-5">Asas Sains komputer ialah satu kajian terhadap asas teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya dalam sistem komputer.</p>
+                <a class="btn btn-primary btn-xl js-scroll-trigger" href="/curriculum/computational_thinking">Belajar sekarang</a>
             </div>
         </div>
     </div>
@@ -21,11 +21,14 @@
 <section class="page-section bg-primary" id="intro">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-8 text-center">
-                <h2 class="text-white mt-0">Mengapah memilih mata pelajaran ini?</h2>
+            <div class="text-center">
+                <h2 class="text-white mt-0">Mengapakah anda perlu memilih mata pelajaran ini?</h2>
                 <hr class="divider light my-4" />
-                <p class="text-white-50 mb-4">bla bla bla..</p>
-                <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+                <p class="text-white-50 mb-4">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim eu turpis egestas pretium aenean pharetra magna. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat. Ut lectus arcu bibendum at varius vel pharetra vel. Vulputate enim nulla aliquet porttitor lacus luctus. Cursus risus at ultrices mi tempus. Condimentum vitae sapien pellentesque habitant morbi tristique senectus et netus. Nunc scelerisque viverra mauris in. Vitae sapien pellentesque habitant morbi tristique. Sit amet purus gravida quis blandit turpis.
+
+                    Enim ut sem viverra aliquet eget sit amet tellus. Mauris pellentesque pulvinar pellentesque habitant morbi tristique senectus et netus. Pharetra magna ac placerat vestibulum. Sed velit dignissim sodales ut eu sem integer. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Phasellus faucibus scelerisque eleifend donec pretium vulputate. Hac habitasse platea dictumst quisque sagittis purus. Pellentesque eu tincidunt tortor aliquam. Urna molestie at elementum eu facilisis. Ultricies lacus sed turpis tincidunt id aliquet risus. Semper viverra nam libero justo laoreet sit. Vitae justo eget magna fermentum iaculis eu non diam phasellus. Nunc scelerisque viverra mauris in aliquam sem fringilla ut morbi. Dignissim sodales ut eu sem integer vitae justo eget. Facilisis magna etiam tempor orci eu lobortis elementum. Donec pretium vulputate sapien nec sagittis aliquam malesuada. Pharetra convallis posuere morbi leo urna molestie.
+                </p>
             </div>
         </div>
     </div>
@@ -47,7 +50,7 @@
                 <div class="mt-5">
                     <i class="fas fa-4x fa-boxes text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Perwakilan Data</h3>
-                    <p class="text-muted mb-0">Format-format fail dan nombor asas 2, 8, 10 dan 16.</p>
+                    <p class="text-muted mb-0">Format-format fail imej dan audio serta nombor asas 2 dan 10.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center ca-item">
@@ -61,7 +64,7 @@
                 <div class="mt-5">
                     <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Kod Arahan</h3>
-                    <p class="text-muted mb-0">Pengaturcaraan dalam bahasa HTML, SQL dan Python.</p>
+                    <p class="text-muted mb-0">Pembangunan web dalam HTML.</p>
                 </div>
             </div>
         </div>
