--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -9,7 +9,7 @@
     <meta name="author" content=""/>
     <title>Asas Sains Komputer SMK TInggi Batu Pahat</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="{% static 'home/images/favicon.ico' %}"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'home/images/logo.png' %}"/>
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
@@ -28,25 +28,26 @@
 <!-- Navigation Bar-->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="{{ nav_styling|default:';' }}">
     <div class="container">
-        <img class="nav-logo" src="{% static 'home/images/logo.png' %}">
+        <a class="navbar-brand" href="#">
+            <img src="{% static 'home/images/logo.png' %}" width="60" height="60" alt="">
+        </a>
         <a class="navbar-brand js-scroll-trigger" href="#page-top" style="{{ nav_text_styling|default:';' }}">SMK Tinggi
-            Batu Pahat <br> Sekolah Kluster Kecemerlangan</a>
+            Batu Pahat <br> Sekolah Kluster Kecemerlangan
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#intro"
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#intro"
                                         style="{{ nav_text_styling|default:';' }}">Pengenalan</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#curriculum"
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#curriculum"
                                         style="{{ nav_text_styling|default:';' }}">Kurikulum</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#careers"
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#careers"
                                         style="{{ nav_text_styling|default:';' }}">Kerjaya</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/curriculum"
-                                        style="{{ nav_text_styling|default:';' }}">Forum</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/"
-                                        style="{{ nav_text_styling|default:';' }}">Staf Sekolah</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact"
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/porfolio"
+                                        style="{{ nav_text_styling|default:';' }}">Portfolio</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#contact"
                                         style="{{ nav_text_styling|default:';' }}">Hubungi Kami</a></li>
             </ul>
         </div>
