Final bug and typo fix -- home

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -39,34 +39,34 @@
         <h2 class="text-center mt-0">Kurikulum</h2>
         <hr class="divider my-4" />
         <div class="row">
-            <div class="col-lg-3 col-md-6 text-center ca-item">
+            <a class="col-lg-3 col-md-6 text-center ca-item" href="curriculum/computational_thinking">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-lightbulb text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Teknik Pemikiran Komputasional</h3>
                     <p class="text-muted mb-0">Teknik-teknik asas untuk menyelesaiakn masalah berbantukan komputer.</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center ca-item">
+            </a>
+            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/data_representation">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-boxes text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Perwakilan Data</h3>
                     <p class="text-muted mb-0">Format-format fail imej dan audio serta nombor asas 2 dan 10.</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center ca-item">
+            </a>
+            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/algorithms">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-project-diagram text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Algorithma</h3>
                     <p class="text-muted mb-0">Perwakilan satu seri langkah dalam penyelesaian masalah dengan pseudokod dan carta alir.</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center ca-item">
+            </a>
+            <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/code">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Kod Arahan</h3>
                     <p class="text-muted mb-0">Pembangunan web dalam HTML.</p>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
     <br>
