--- a/curriculum/templates/curriculum/base.html
+++ b/curriculum/templates/curriculum/base.html
@@ -49,14 +49,16 @@
             <!-- Single Comment -->
             {% if comments %}
                 {% for comment in comments %}
-                    <div class="media mb-4">
-                        <img class="d-flex mr-3 rounded-circle" src="{% static 'images/user_img.png' %}" alt="" width="50px" height="50px">
-                        <div class="media-body">
-                            <h5 class="mt-0">{{ comment.username }}</h5>
-                            {{ comment.content }}
+                    {% if comment.page == page %}
+                        <div class="media mb-4">
+                            <img class="d-flex mr-3 rounded-circle" src="{% static 'images/user_img.png' %}" alt="" width="50px" height="50px">
+                            <div class="media-body">
+                                <h5 class="mt-0">{{ comment.username }}</h5>
+                                {{ comment.content }}
+                            </div>
+                            <small>{{ comment.date }}</small>
                         </div>
-                        <small>{{ comment.date }}</small>
-                    </div>
+                    {% endif %}
                 {% endfor %}
             {% endif %}
         </div>
