--- a/curriculum/templates/curriculum/comp_t.html
+++ b/curriculum/templates/curriculum/comp_t.html
@@ -1,21 +1,23 @@
 {% extends 'curriculum/base.html'%}
+{% load static %}
+
 {% block material %}
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos iste
-    ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus,
-    voluptatibus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis unde
-    eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis.
-    Enim, iure!</p>
-<blockquote class="blockquote">
-    <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a
-        ante.</p>
-    <footer class="blockquote-footer">Someone famous in
-        <cite title="Source Title">Source Title</cite>
-    </footer>
-</blockquote>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas placeat
-    totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem obcaecati?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo, aliquam
-    tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam recusandae?
-    Qui, necessitatibus, est!</p>
+<p class="has-line-data" data-line-start="4" data-line-end="5"><img src="{% static 'images/0.png' %}" alt=""></p>
+<p class="has-line-data" data-line-start="6" data-line-end="8"><strong><em>Pemikiran komputasional</em></strong> pemikiran ialah <strong>suatu proses pemikiran bagi menyelesaikan masalah</strong> oleh manusia sendiri yang dibantu oleh mesin atau kedua-duanya sekali dengan menggunakan konsep asas sains komputer.<br>
+Terdapat 4 teknik yang akan kita belajar semsa tingkatan 1, 2 dan 3.</p>
+<hr>
+<h3 class="code-line" data-line-start=11 data-line-end=12><a id="Teknik_Leraian__decomposition__11"></a>Teknik Leraian <em>(decomposition)</em></h3>
+<p class="has-line-data" data-line-start="12" data-line-end="13"><img src="{% static 'images/1.png' %}" alt=""></p>
+<p class="has-line-data" data-line-start="14" data-line-end="15"><strong>Pemecahan suatu masalah</strong> atau sistem yang kompleks kepada bahagian-bahagian yang lebih kecil. Dengan ini, kits dapat kita <strong>memahami sesuatu proses kerja dengan lebih mudah</strong>.</p>
+<hr>
+<h3 class="code-line" data-line-start=18 data-line-end=19><a id="Teknik_Pengecaman_Corak__pattern_recognition__18"></a>Teknik Pengecaman Corak <em>(pattern recognition)</em></h3>
+<p class="has-line-data" data-line-start="19" data-line-end="20"><img src="{% static 'images/2.png' %}" alt=""></p>
+<p class="has-line-data" data-line-start="21" data-line-end="22"><strong>Pengenalpastian persamaan</strong> dalam pelbagai masalah atau masalah yang sama. Teknik ini mombolehkan kita menghasilkan satu idea yang boleh digunakan untuk menyelesaikan masalah lain yang mempunyai persamaan.</p>
+<hr>
+<h3 class="code-line" data-line-start=25 data-line-end=26><a id="Teknik_Peniskalaan__abstraction__25"></a>Teknik Peniskalaan <em>(abstraction)</em></h3>
+<p class="has-line-data" data-line-start="27" data-line-end="28"><strong>Pengutamaan aspek-aspek yang penting</strong> dalam suatu masalah dan <strong>meninggalkan masalah yang kurang penting</strong>. Dengan ini, kita <strong>dapat mengenal pasti faktor-faktor yang akan mempengaruhi hasil atau output yang diperlukan</strong>.</p>
+<hr>
+<h3 class="code-line" data-line-start=30 data-line-end=31><a id="Teknik_Pengitlakan__generalisation__30"></a>Teknik Pengitlakan <em>(generalisation)</em></h3>
+<p class="has-line-data" data-line-start="31" data-line-end="32"><img src="{% static 'images/3.png' %}" alt=""></p>
+<p class="has-line-data" data-line-start="33" data-line-end="34"><strong>Pembinaan model</strong> berdasarkan corak-corak yang telah dikenal pasti daripada beberapa masalah yang serupa. Model boleh dibina dalam bentuk <strong>formula</strong>, <strong>teknik</strong>, <strong>peraturan</strong> dan <strong>langkah-langkah</strong>.</p>
 {% endblock material %}
