Add footer (copyright notice)

--- a/curriculum/templates/curriculum/base.html
+++ b/curriculum/templates/curriculum/base.html
@@ -105,4 +105,11 @@
         </div>
     </div>
 </div>
+<!-- Footer-->
+<footer class="bg-light py-5">
+    <div class="container">
+        <div class="small text-center text-muted">Copyright © 2020 Jared Liw Zhi Long - All Rights Reserved.
+        </div>
+    </div>
+</footer>
 {% endblock content %}
